<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PanelUsuarioActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="232dp"
        android:layout_height="49dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/eem_logo_principal_horizontal"
        tools:layout_editor_absoluteY="25dp" />

    <TextView
        android:id="@+id/textHorario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horario"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="108dp" />

    <Button
        android:id="@+id/botonVerHorarios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/formato_boton"
        android:text="@string/ver_horarios"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="632dp" />

    <Button
        android:id="@+id/botonVerReuniones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/formato_boton"
        android:text="@string/ver_reuniones"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="229dp"
        tools:layout_editor_absoluteY="632dp" />

    <TableLayout
        android:layout_width="361dp"
        android:layout_height="364dp"
        android:background="@drawable/table_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="186dp">

        <!-- Fila 1 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#008aab"
                android:gravity="center"
                android:padding="8dp"
                android:text="HORA"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#008aab"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/lunes"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#008aab"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/martes"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#008aab"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/miercoles"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#008aab"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/jueves"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#008aab"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/viernes"
                android:textColor="@color/white" />
        </TableRow>

        <!-- Fila 2 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#3cb4e5"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/hora1"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="Fila 2, Col 2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="Fila 2, Col 3" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="Fila 2, Col 4" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="Fila 2, Col 5" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="Fila 2, Col 6" />
        </TableRow>

        <!-- Fila 3 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#3cb4e5"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/hora2"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="Fila 3, Col 2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="Fila 3, Col 3" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="Fila 3, Col 4" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="Fila 3, Col 5" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="Fila 3, Col 6" />
        </TableRow>

        <!-- Fila 4 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#3cb4e5"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/hora3"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="Fila 4, Col 2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="Fila 4, Col 3" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="Fila 4, Col 4" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="Fila 4, Col 5" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="Fila 4, Col 6" />
        </TableRow>

        <!-- Fila 5 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#3cb4e5"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/hora4"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="Fila 5, Col 2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="Fila 5, Col 3" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="Fila 5, Col 4" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="Fila 5, Col 5" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="Fila 5, Col 6" />
        </TableRow>

        <!-- Fila 6 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#3cb4e5"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/hora5"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="Fila 6, Col 2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="Fila 6, Col 3" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="Fila 6, Col 4" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="Fila 6, Col 5" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="Fila 6, Col 6" />
        </TableRow>

        <!-- Fila 7 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#3cb4e5"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/hora6"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="Fila 7, Col 2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="Fila 7, Col 3" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="Fila 7, Col 4" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="Fila 7, Col 5" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="Fila 7, Col 6" />
        </TableRow>

    </TableLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_email"
        tools:layout_editor_absoluteY="25dp" />

</androidx.constraintlayout.widget.ConstraintLayout>